--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="col-md-4">
                 <!-- Inserisci la tua foto qui -->
-                <img src="tua_foto.jpg" alt="Francesco Sgaramella" class="img-fluid rounded-circle">
+                <img src="foto.jpg" alt="Francesco Sgaramella" class="img-fluid rounded-circle">
             </div>
             <div class="col-md-8">
                 <h1>Ciao, sono Francesco Sgaramella</h1>
