--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p>La cybersecurity riguarda la protezione dei sistemi informatici, delle reti e dei dati da minacce e attacchi informatici. Questi attacchi possono includere virus, malware, phishing e molti altri. La cybersecurity è fondamentale per garantire la privacy e la sicurezza delle informazioni personali e aziendali.</p>
                 <p>Come esperto di cybersecurity, mi dedico a studiare, analizzare e implementare soluzioni per proteggere le organizzazioni dai rischi informatici. La mia missione è contribuire a rendere il mondo online un luogo più sicuro per tutti.</p>
             <p>Clicca sul link per aprire la Relazione sul virus Infect:</p>
-    <a href="cybers/Relazione sul virus Infect Francesco Sgaramella.docx">Apri il file
+    <a href="https://cybers/Relazione sul virus Infect Francesco Sgaramella.docx">Apri il file
             </div>
         </div>
     </div>
